# mailsystem

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml
app/: main.py
app/api/: deps.py  routes_analytics.py  routes_bulk.py  routes_emails.py  routes_send.py  routes_webhooks.py
app/core/: config.py  idempotency.py  logging.py  rate_limit.py  security.py
app/db/: session.py
app/db/migrations/: 001_init.sql
app/db/repositories/: mail_repository.py
app/domain/: enums.py  errors.py  models.py  schemas.py
app/providers/: base.py  mock_provider.py  registry.py  smtp_provider.py
app/queue/: celery_app.py  retry_policy.py  tasks_bulk.py  tasks_send.py
app/services/: analytics_service.py  bulk_service.py  mail_service.py  webhook_service.py
app/templates/: renderer.py  validators.py
docker/: Dockerfile  docker-compose.yml
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  api.js  styles.css
scripts/: bootstrap.sh
tests/: conftest.py
tests/e2e/: test_webhook_flow.py
tests/integration/: test_send_api.py
tests/unit/: test_mock_provider.py  test_renderer.py  test_retry_policy.py  test_security.py
