[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailsystem"
version = "0.1.0"
description = "Production-ready modular mail system"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "jinja2>=3.1.4",
  "python-json-logger>=2.0.7",
  "orjson>=3.10.7",
  "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
